--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require-dev": {
         "phpunit/phpunit": "^5.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "PhpBa\\PhpBusinessBa\\": "src/php-business-ba/"
+        }
     }
 }
