--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     },
     "autoload": {
         "psr-4": {
-            "PhpBa\\PhpBusinessBa\\": "src/php-business-ba/"
+            "PhpBa\\PhpBusinessBa\\": "src/php_business_ba/"
         }
     }
 }
